--- a/assets/sass/_pagination.scss
+++ b/assets/sass/_pagination.scss
@@ -1,5 +1,3 @@
-$pagination-bg: map-get($theme-colors, "accent");
-$pagination-fg: map-get($theme-colors, "dark");
 ul.pagination {
   align-items: center;
   display: flex;
@@ -12,30 +10,27 @@ ul.pagination {
     list-style: none;
     margin: 0 0.2em;
     a {
-      background: $pagination-bg;
-      color: text-contrast($pagination-fg, $pagination-bg,7);
+      color: $site-fg;
+      @include dark-mode() {
+        color: $site-bg;
+      }
       width: 1.5em;
       height: 1.5em;
       display: inline-block;
       border-radius: 0.3em;
-      border: 1px solid;
       text-decoration: none;
-      border-color: darken($pagination-bg, 20%);
-      @include dark-mode {
-        border-color: lighten($pagination-bg, 20%);
-      }
+      padding: 0 0.3em;
       &:hover {
-        background: lighten($pagination-bg, 20%);
-        color: text-contrast($pagination-fg, lighten($pagination-bg, 20%),7);
+        background: #e4e4e4;
+        @include dark-mode() {
+          color: $site-fg;
+        }
       }
     }
     &.active {
       a {
-        background: darken($pagination-bg, 20%);
-        &:hover {
-          background: darken($pagination-bg, 20%);
-          color: map-get($theme-colors, "dark");
-        }
+        color: text-contrast($site-link-color, #e4e4e4);
+        background: #e4e4e4;
       }
     }
   }
